exam/golang-mathapp/golang-mathapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-mathapp-deployment
  namespace: ahmedhajji
spec:
  replicas: 3
  selector:
    matchLabels:
      app: golang-mathapp
  template:
    metadata:
      labels:
        app: golang-mathapp
    spec:
      containers:
      - name: golang-mathapp
        image: ahmedhajji1/golang-mathapp:latest
        ports:
        - containerPort: 8010
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /tmp/data
          name: data-storage
      volumes:
      - name: data-storage
        persistentVolumeClaim:
          claimName: golang-mathapp-pvc
