exam/golang-mathapp/golang-mathapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: golang-mathapp-pod
  namespace: ahmedhajji
  labels:
    app: golang-mathapp
spec:
  containers:
  - name: golang-mathapp
    image: ahmedhajji1/golang-mathapp:latest
    ports:
    - containerPort: 8010
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
