exam/golang-mathapp/golang-mathapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-mathapp-service
  namespace: ahmedhajji
spec:
  selector:
    app: golang-mathapp
  ports:
  - protocol: TCP
    port: 8010
    targetPort: 8010
